@@ -1,6 +1,6 @@
 /*
  * Open Hospital (www.open-hospital.org)
- * Copyright © 2006-2023 Informatici Senza Frontiere (info@informaticisenzafrontiere.org)
+ * Copyright © 2006-2024 Informatici Senza Frontiere (info@informaticisenzafrontiere.org)
  *
  * Open Hospital is a free and open source software for healthcare data management.
  *
@@ -25,17 +25,20 @@ import java.awt.AWTEvent;
 import java.awt.BorderLayout;
 import java.awt.Color;
 import java.awt.Dimension;
+import java.awt.Image;
 import java.awt.Toolkit;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.KeyEvent;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
-import java.io.File;
+import java.lang.reflect.InvocationTargetException;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.Optional;
 
 import javax.swing.BorderFactory;
@@ -52,15 +55,22 @@ import javax.swing.WindowConstants;
 
 import org.isf.generaldata.GeneralData;
 import org.isf.generaldata.MessageBundle;
+import org.isf.menu.gui.Login.LoginListener;
+import org.isf.menu.gui.SubMenu.CommandListener;
 import org.isf.menu.manager.Context;
 import org.isf.menu.manager.UserBrowsingManager;
 import org.isf.menu.model.User;
 import org.isf.menu.model.UserGroup;
 import org.isf.menu.model.UserMenuItem;
-import org.isf.session.UserSession;
+import org.isf.session.RestartUserSession;
 import org.isf.sessionaudit.manager.SessionAuditManager;
 import org.isf.sessionaudit.model.SessionAudit;
 import org.isf.sms.service.SmsSender;
+import org.isf.telemetry.constants.TelemetryConstants;
+import org.isf.telemetry.daemon.TelemetryDaemon;
+import org.isf.telemetry.gui.TelemetryEdit;
+import org.isf.telemetry.manager.TelemetryManager;
+import org.isf.telemetry.model.Telemetry;
 import org.isf.utils.exception.OHServiceException;
 import org.isf.utils.exception.gui.OHServiceExceptionUtil;
 import org.isf.utils.jobjects.ModalJFrame;
@@ -72,12 +82,17 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.slf4j.MDC;
 
-public class MainMenu extends JFrame implements ActionListener, Login.LoginListener, SubMenu.CommandListener {
+public class MainMenu extends JFrame implements ActionListener, LoginListener, CommandListener {
 
 	private static final long serialVersionUID = 7620582079916035164L;
 	public static final String ADMIN_STR = "admin";
 	private boolean flag_Xmpp;
 	private boolean flag_Sms;
+	private boolean flag_Telemetry;
+	private TelemetryDaemon telemetryDaemon;
+	// used to understand if a module is enabled
+	private Map<String, Boolean> activableModules;
+
 	private SessionAuditManager sessionAuditManager = Context.getApplicationContext().getBean(SessionAuditManager.class);
 	private static final Logger LOGGER = LoggerFactory.getLogger(MainMenu.class);
 	private Integer sessionAuditId;
@@ -128,22 +143,22 @@ public class MainMenu extends JFrame implements ActionListener, Login.LoginListe
 
 	// singleUser=true : one user
 	private boolean singleUser;
-	// internalPharmacies=false : no internalPharmacies
-	private boolean internalPharmacies;
-	// debug mode
-	private boolean debug;
-	private MainMenu myFrame;
 
 	private UserBrowsingManager userBrowsingManager = Context.getApplicationContext().getBean(UserBrowsingManager.class);
 
 	public MainMenu(User myUserIn) {
 		setTitle(OH_TITLE);
 		myUser = myUserIn;
-		myFrame = this;
+		MainMenu myFrame = this;
 		GeneralData.initialize();
+		this.activableModules = retrieveActivatedModulesMap();
 		Locale.setDefault(new Locale(GeneralData.LANGUAGE)); // for all fixed options YES_NO_CANCEL in dialogs
 		singleUser = GeneralData.getGeneralData().getSINGLEUSER();
 		MessageBundle.getBundle();
+		// internalPharmacies=false : no internalPharmacies
+		boolean internalPharmacies;
+		// debug mode
+		boolean debug;
 		try {
 			internalPharmacies = GeneralData.INTERNALPHARMACIES;
 			debug = GeneralData.DEBUG;
@@ -160,7 +175,6 @@ public class MainMenu extends JFrame implements ActionListener, Login.LoginListe
 		} catch (Exception e) {
 			singleUser = true; // default for property not found
 			internalPharmacies = false; // default for property not found
-			debug = false; // default for property not found
 		}
 
 		if (singleUser) {
@@ -176,7 +190,7 @@ public class MainMenu extends JFrame implements ActionListener, Login.LoginListe
 				hiddenOwner.setIconImage(img.getImage());
 				hiddenOwner.setLocation(-10000, -1000);
 				hiddenOwner.setSize(new Dimension(1, 1));
-				hiddenOwner.show();
+				hiddenOwner.setVisible(true);
 				new Login(hiddenOwner, this);
 				hiddenOwner.dispose();
 			}
@@ -186,6 +200,12 @@ public class MainMenu extends JFrame implements ActionListener, Login.LoginListe
 				actionExit(2);
 			}
 		}
+
+		flag_Telemetry = GeneralData.TELEMETRYENABLED;
+		if (flag_Telemetry) {
+			runTelemetry();
+		}
+
 		MDC.put("OHUser", myUser.getUserName());
 		MDC.put("OHUserGroup", myUser.getUserGroupName().getCode());
 		try {
@@ -211,7 +231,7 @@ public class MainMenu extends JFrame implements ActionListener, Login.LoginListe
 				}
 				new CommunicationFrame();
 				/*
-				 * Interaction communication= new Interaction(); communication.incomingChat(); communication.receiveFile();
+				 * Interaction communication = new Interaction(); communication.incomingChat(); communication.receiveFile();
 				 */
 			} catch (XMPPException e) {
 				String message = e.getMessage();
@@ -273,6 +293,17 @@ public class MainMenu extends JFrame implements ActionListener, Login.LoginListe
 				myMenu.remove(umi);
 			}
 		}
+		if (!flag_Telemetry) { // remove Telemetry Manager if not enabled
+			List<UserMenuItem> junkMenu = new ArrayList<>();
+			for (UserMenuItem umi : myMenu) {
+				if ("telemetry".equalsIgnoreCase(umi.getCode())) {
+					junkMenu.add(umi);
+				}
+			}
+			for (UserMenuItem umi : junkMenu) {
+				myMenu.remove(umi);
+			}
+		}
 
 		// if not internalPharmacies mode remove "medicalsward" menu
 		if (!internalPharmacies) {
@@ -290,7 +321,9 @@ public class MainMenu extends JFrame implements ActionListener, Login.LoginListe
 		// remove disabled buttons
 		List<UserMenuItem> junkMenu = new ArrayList<>();
 		for (UserMenuItem umi : myMenu) {
-			if (!umi.isActive()) {
+			// if is not active or it is a module that is not enabled (there is no point in
+			// showing a menu item)
+			if (!umi.isActive() || isMenuItemNotEnabled(umi.getCode())) {
 				junkMenu.add(umi);
 			}
 		}
@@ -324,6 +357,40 @@ public class MainMenu extends JFrame implements ActionListener, Login.LoginListe
 		});
 
 		setVisible(true);
+	}
+
+	private Map<String, Boolean> retrieveActivatedModulesMap() {
+		return new HashMap<>() {
+
+			private static final long serialVersionUID = 1L;
+			{
+				put(TelemetryConstants.MENU_ID, Boolean.valueOf(GeneralData.TELEMETRYENABLED));
+			}
+		};
+	}
+
+	private boolean isMenuItemNotEnabled(String menuCode) {
+		return this.activableModules.containsKey(menuCode) && !activableModules.get(menuCode).booleanValue();
+	}
+
+	private void runTelemetry() {
+		TelemetryManager telemetryManager = Context.getApplicationContext().getBean(TelemetryManager.class);
+		Telemetry settings = telemetryManager.retrieveSettings();
+		// active = null => show popup
+		// active = true => start daemon
+		// active = false => do nothing
+		if (settings == null || settings.getActive() == null) {
+			// show telemetry popup
+			new TelemetryEdit(this, true);
+		}
+		// start telemetry daemon
+		this.telemetryDaemon = TelemetryDaemon.getTelemetryDaemon();
+		if (telemetryDaemon.isInitialized()) {
+			telemetryDaemon.start();
+		} else {
+			flag_Telemetry = false;
+		}
+
 	}
 
 	private void actionExit(int status) {
@@ -361,7 +428,12 @@ public class MainMenu extends JFrame implements ActionListener, Login.LoginListe
 						return;
 					}
 					try {
-						Object target = Class.forName(app).newInstance();
+						Object target;
+						try {
+							target = Class.forName(app).getDeclaredConstructor().newInstance();
+						} catch (InvocationTargetException | NoSuchMethodException e) {
+							throw new RuntimeException(e);
+						}
 						try {
 							((ModalJFrame) target).showAsModal(this);
 						} catch (ClassCastException noModalJFrame) {
@@ -386,11 +458,7 @@ public class MainMenu extends JFrame implements ActionListener, Login.LoginListe
 
 		private static final long serialVersionUID = 4338749100837551874L;
 
-		private JButton[] button;
-		private MainMenu parentFrame;
-
 		public MainPanel(MainMenu parentFrame) {
-			this.parentFrame = parentFrame;
 			int numItems = 1;
 
 			setLayout(new BorderLayout());
@@ -400,7 +468,7 @@ public class MainMenu extends JFrame implements ActionListener, Login.LoginListe
 					numItems++;
 				}
 			}
-			button = new JButton[numItems];
+			JButton[] button = new JButton[numItems];
 
 			int k = 0;
 			for (UserMenuItem u : myMenu) {
@@ -447,7 +515,7 @@ public class MainMenu extends JFrame implements ActionListener, Login.LoginListe
 			if (!singleUser) {
 				button[k].addActionListener(actionEvent -> {
 					updateSessionAudit();
-					UserSession.restartSession();
+					RestartUserSession.restartSession();
 				});
 			} else {
 				button[k].addActionListener(actionEvent -> actionExit(0));
@@ -456,16 +524,22 @@ public class MainMenu extends JFrame implements ActionListener, Login.LoginListe
 		}
 
 		private JPanel getLogoPanel() {
-			JLabel logo_appl = new JLabel(new ImageIcon("rsc" + File.separator + "images" + File.separator + "logo_menu_vert.png"));
-			JLabel logo_hosp = new JLabel(new ImageIcon("rsc" + File.separator + "images" + File.separator + "logo_hospital.png"));
+			JLabel logo_appl = new JLabel(new ImageIcon(new ImageIcon(getClass().getClassLoader().getResource("logo_menu_vert.png"))
+							.getImage().getScaledInstance(28, 180, Image.SCALE_SMOOTH)));
+			Object checkLogoHospital = getClass().getClassLoader().getResource("logo_hospital.png");
+
 			JPanel logoPanel = new JPanel();
 			logoPanel.setBorder(BorderFactory.createEmptyBorder(8, 10, 8, 10)); // top, left, bottom, right
 			BoxLayout layout = new BoxLayout(logoPanel, BoxLayout.Y_AXIS);
 			logoPanel.setLayout(layout);
 			logoPanel.setBackground(Color.decode(BACKGROUND_COLOR_HEX));
-			if (logo_hosp.getIcon().getIconHeight() > 0) {
+			if (checkLogoHospital != null) {
+				JLabel logo_hosp = new JLabel(new ImageIcon(new ImageIcon(getClass().getClassLoader().getResource("logo_hospital.png"))
+								.getImage().getScaledInstance(100, 100, Image.SCALE_SMOOTH)));
 				logoPanel.add(logo_hosp);
-				logo_appl = new JLabel(new ImageIcon(getClass().getClassLoader().getResource("logo_menu.png")));
+				logo_appl.setIcon(new ImageIcon(
+								new ImageIcon(getClass().getClassLoader().getResource("logo_menu.png"))
+												.getImage().getScaledInstance(90, 57, Image.SCALE_SMOOTH)));
 			} else {
 				logoPanel.add(Box.createVerticalStrut(100)); // for short menu
 			}
